nova_tests/negative_capability/folder_cycle_setup/modA/two.nv
// modA peer 2 — нужен чтобы папка считалась folder-module (≥2 peers).

module modA.two

export fn a_extra() -> int =>
    100
